feat: add html, css y js course

--- a/HtmlCssJs/CSS/Leccion08-Display/index.html
+++ b/HtmlCssJs/CSS/Leccion08-Display/index.html
@@ -48,6 +48,12 @@
 
 
     <hr/>
+    <h2>Display Inline-block</h2>
+
+    <h3 class="inline-block">Titulo inline block</h3>
+
+
+    <hr/>
     <h2>Visibility Hidden</h2>
 
     <h3 class="hidden">Titulo oculto</h3> No se ve nada pero ocupa
