modern js in action course

--- a/JavaScript/Part1Fundamentals/index.html
+++ b/JavaScript/Part1Fundamentals/index.html
@@ -14,6 +14,6 @@
         alert('Hello!')
         </script> 
     -->
-    <script src="app.js"></script>
+    <script src="variablesTypesAndMethods.js"></script>
 </body>
 </html>
