modern js in action course

--- a/JavaScript/Part1Fundamentals/index.html
+++ b/JavaScript/Part1Fundamentals/index.html
@@ -14,7 +14,9 @@
         alert('Hello!')
         </script> 
     -->
-    <script src="1variablesTypesAndMethods.js"></script>
-    <script src="2controlFlow.js"></script>
+    <!-- <script src="1variablesTypesAndMethods.js"></script> -->
+    <!-- <script src="2controlFlow.js"></script> -->
+    <!-- <script src="3functions.js"></script> -->
+    <script src="4loops.js"></script>
 </body>
 </html>
