--- a/JavaScript/Part1Fundamentals/index.html
+++ b/JavaScript/Part1Fundamentals/index.html
@@ -17,6 +17,7 @@
     <!-- <script src="1variablesTypesAndMethods.js"></script> -->
     <!-- <script src="2controlFlow.js"></script> -->
     <!-- <script src="3functions.js"></script> -->
-    <script src="4loops.js"></script>
+    <!-- <script src="4loops.js"></script> -->
+    <script src="5windowObjectAndMethods.js"></script>
 </body>
 </html>
