--- a/Languages/JavaScript/100JSProjects/01-tinder-swipe/index.html
+++ b/Languages/JavaScript/100JSProjects/01-tinder-swipe/index.html
@@ -9,8 +9,8 @@
 
       <div class="cards">
         <article>
-          <img src="./photos/1.webp" alt="Leila, red air man, 33 years old" />
-          <h2>Álex <span>27</span></h2>
+          <img src="./photos/1.webp" alt="Leila, red air man, 27 years old" />
+          <h2>Leila <span>27</span></h2>
           <div class="choice nope">NOPE</div>
           <div class="choice like">LIKE</div>
         </article>
@@ -20,6 +20,10 @@
           <div class="choice nope">NOPE</div>
           <div class="choice like">LIKE</div>
         </article>
+        <span>
+          No hay mas personas cerca de ti...<br />
+          Vuelve a intentarlo más tarde
+        </span>
       </div>
 
       <footer>
@@ -139,6 +143,16 @@
     height: 100%;
     margin: 0 auto;
 
+    & > span {
+      display: grid;
+      place-content: center;
+      color: #777;
+      font-size: 14px;
+      text-align: center;
+      height: 100%;
+      z-index: -1;
+    }
+
     & article {
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -154,6 +168,53 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+      }
+
+      &.go-left {
+        transform: translateX(-150%) rotate(-30deg) !important;
+      }
+
+      &.go-right {
+        transform: translateX(150%) rotate(30deg) !important;
+      }
+
+      &.go-left,
+      &.go-right {
+        transition: transform 0.3s ease, rotate 0.3s ease;
+      }
+
+      &.reset {
+        transition: transform 0.3s ease;
+        transform: translateX(0) !important;
+      }
+
+      &.choice {
+        border-radius: 8px;
+        color: black;
+        border: 4px solid;
+        z-index: 9999;
+        position: absolute;
+        top: 32px;
+        right: 16px;
+        opacity: 0;
+        padding: 4px 8px;
+        font-size: 24px;
+        font-weight: bold;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        width: fit-content;
+
+        &.nope {
+          border-color: #ff6e63;
+          color: #ff6e63;
+          transform: rotate(30deg);
+        }
+
+        &.like {
+          border-color: #63ff68;
+          color: #63ff68;
+          left: 16px;
+          transform: rotate(-30deg);
+        }
       }
 
       & h2 {
@@ -180,6 +241,7 @@
 </style>
 
 <script>
+  const DECISION_THRESHOLD = 120
   let isAnimating = false
   let pullDeltaX = 0
 
@@ -207,6 +269,13 @@
 
       actualCard.style.transform = `translateX(${pullDeltaX}px) rotate(${deg}deg)`
       actualCard.style.cursor = `grabbing`
+
+      const isRight = pullDeltaX > 0
+      const choiceEl = isRight
+        ? actualCard.querySelector(".choice.like")
+        : actualCard.querySelector(".choice.nope")
+
+        choiceEl.style.opacity = Math.abs(pullDeltaX) / 100
     }
 
     function onEnd(event) {
@@ -216,10 +285,23 @@
       document.removeEventListener("touchmove", onMove)
       document.removeEventListener("touchend", onEnd)
 
-      isAnimating = false
-      pullDeltaX = 0
-      actualCard.style.transform = 'none'
-      actualCard.style.cursor = 'grab'
+      if (Math.abs(pullDeltaX) > DECISION_THRESHOLD) {
+        const goRight = pullDeltaX >= 0
+
+        actualCard.classList.add(goRight ? "go-right" : "go-left")
+        actualCard.addEventListener("transitionend", () => actualCard.remove)
+      } else {
+        actualCard.classList.add("reset")
+        actualCard.classList.remove("go-right", "go-left")
+      }
+
+      actualCard.addEventListener("transitionend", () => {
+        actualCard.removeAttribute("style")
+        actualCard.classList.remove("reset")
+
+        pullDeltaX = 0
+        isAnimating = false
+      })
     }
   }
 
