--- a/Languages/JavaScript/100JSProjects/01-tinder-swipe/index.html
+++ b/Languages/JavaScript/100JSProjects/01-tinder-swipe/index.html
@@ -1,8 +1,9 @@
 <title>100 Proyectos JS | 01 - Tinder Swipe</title>
 
-<body>
+<div class="shadow">
   <main>
     <section>
+      <div class="white-bkg"></div>
       <header>
         <img src="./resources/tinder-logo.webp" alt="Tinder logo" />
       </header>
@@ -35,7 +36,7 @@
       </footer>
     </section>
   </main>
-</body>
+</div>
 
 <style>
   *,
@@ -55,7 +56,18 @@
     min-height: 100vh;
     overflow: hidden;
     user-select: none;
-    background: #222;
+    background: #e5e5e5;
+  }
+
+  .white-bkg {
+    position: absolute;
+    background: #f6f6f6;
+    inset: 0;
+    z-index: -10;
+  }
+
+  .shadow {
+    filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.3));
   }
 
   main {
@@ -64,11 +76,10 @@
     width: 320px;
     height: 640px;
     display: flex;
-    filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.3));
+    position: relative;
   }
 
   section {
-    background: #f6f6f6;
     width: 100%;
     border-radius: 32px;
     display: flex;
@@ -82,7 +93,8 @@
 
   header {
     display: flex;
-    justify-content: center;
+    justify-content: start;
+    padding-left: 1rem;
 
     & img {
       width: 24px;
@@ -188,7 +200,7 @@
         transform: translateX(0) !important;
       }
 
-      &.choice {
+      & .choice {
         border-radius: 8px;
         color: black;
         border: 4px solid;
@@ -275,7 +287,7 @@
         ? actualCard.querySelector(".choice.like")
         : actualCard.querySelector(".choice.nope")
 
-        choiceEl.style.opacity = Math.abs(pullDeltaX) / 100
+      choiceEl.style.opacity = Math.abs(pullDeltaX) / 100
     }
 
     function onEnd(event) {
@@ -293,6 +305,9 @@
       } else {
         actualCard.classList.add("reset")
         actualCard.classList.remove("go-right", "go-left")
+        actualCard
+          .querySelectorAll(".choice")
+          .forEach(el => el.style.opacity = 0)
       }
 
       actualCard.addEventListener("transitionend", () => {
